--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MASOLITES ECOMAS</title>
-    <link href="https:                                                                                         
-    <link rel="stylesheet" href="assets/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Masolites Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Your HTML content here -->
     <div class="app-container">
         <!-- Top 70% Section -->
         <div class="top-section">
@@ -19,54 +19,14 @@
                     <button class="btn btn-register">Register</button>
                 </div>
             </header>
-            <div class="card">
-                <p class="welcome-message">Welcome to Economic Community Of Masolites (ECOMAS) Platform where aside Platform products and services you can also add yours, buy & sell at highest discounts to fellow Masolites for a better society.</p>
-            </div>
-            <div class="card">
-                <h3>PRIVATE SALE ENDS IN</h3>
-                <div class="countdown-timer">
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="days">120</div>
-                        <div class="countdown-label">Days</div>
-                    </div>
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="hours">00</div>
-                        <div class="countdown-label">Hours</div>
-                    </div>
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="minutes">00</div>
-                        <div class="countdown-label">Minutes</div>
-                    </div>
-                </div>
-                <button class="cta-button buy-button">BUY MAZOL NOW</button>
-            </div>
-            <div class="card">
-                <h3>MAZOL MINING PORTAL</h3>
-                <div class="mining-display" id="minedAmount">0.000000 MZLx</div>
-                <button class="cta-button mining-button" id="miningButton">START MINING</button>
-            </div>
+            <!-- Other content -->
         </div>
         <!-- Bottom 30% Section -->
         <div class="action-grid">
-            <div class="action-card" id="saveEarnBtn">
-                <div class="action-icon">💰</div>
-                <div class="action-label">Save & Earn</div>
-            </div>
-            <div class="action-card" id="escrowShopBtn">
-                <div class="action-icon">🛒</div>
-                <div class="action-label">Escrow Shop</div>
-            </div>
-            <div class="action-card" id="connectWalletBtn">
-                <div class="action-icon">🔗</div>
-                <div class="action-label">Connect Wallet</div>
-            </div>
-            <div class="action-card" id="sendReceiveBtn">
-                <div class="action-icon">⇄</div>
-                <div class="action-label">Send/Receive</div>
-            </div>
+            <!-- Action buttons -->
         </div>
     </div>
 
-    <script src="assets/js/mining.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
