--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masolites Project</title>
+    <title>Masolite Great</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Your HTML content here -->
     <div class="app-container">
-        <!-- Top 70% Section -->
         <div class="top-section">
-            <header>
-                <h1 class="logo">MASOLITES ECOMAS</h1>
-                <p class="tagline">Building Trust & A Better Society Together</p>
-                <div class="auth-buttons">
-                    <button class="btn btn-login">Login</button>
-                    <button class="btn btn-register">Register</button>
+            <div class="card">
+                <p class="welcome-message">Welcome to Economic Community Of Masolites (ECOMAS) Platform where aside Platform products and services you can also add yours, buy & sell at highest discounts to fellow Masolites for a better society.</p>
+            </div>
+            <div class="card">
+                <h3>PRIVATE SALE ENDS IN</h3>
+                <div class="countdown-timer">
+                    <div class="countdown-item">
+                        <div class="countdown-value" id="days">120</div>
+                        <div class="countdown-label">Days</div>
+                    </div>
+                    <div class="countdown-item">
+                        <div class="countdown-value" id="hours">00</div>
+                        <div class="countdown-label">Hours</div>
+                    </div>
+                    <div class="countdown-item">
+                        <div class="countdown-value" id="minutes">00</div>
+                        <div class="countdown-label">Minutes</div>
+                    </div>
                 </div>
-            </header>
-            <!-- Other content -->
-        </div>
-        <!-- Bottom 30% Section -->
-        <div class="action-grid">
-            <!-- Action buttons -->
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                <button class="cta-button buy-button">BUY MAZOL NOW</button>
+            </div>
+            <
