--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,27 +7,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="app-container">
-        <div class="top-section">
-            <div class="card">
-                <p class="welcome-message">Welcome to Economic Community Of Masolites (ECOMAS) Platform where aside Platform products and services you can also add yours, buy & sell at highest discounts to fellow Masolites for a better society.</p>
-            </div>
-            <div class="card">
-                <h3>PRIVATE SALE ENDS IN</h3>
-                <div class="countdown-timer">
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="days">120</div>
-                        <div class="countdown-label">Days</div>
-                    </div>
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="hours">00</div>
-                        <div class="countdown-label">Hours</div>
-                    </div>
-                    <div class="countdown-item">
-                        <div class="countdown-value" id="minutes">00</div>
-                        <div class="countdown-label">Minutes</div>
-                    </div>
+    <div class="container">
+        <h1>MASOLITE GREAT</h1>
+        <div class="card">
+            <h2>Welcome Message</h2>
+            <p>Welcome to Economic Community Of Masolites (ECOMAS) Platform where aside Platform products and services you can also add yours, buy & sell at highest discounts to fellow Masolites for a better society.</p>
+        </div>
+        <div class="card">
+            <h2>Private Sale Ends In</h2>
+            <div class="countdown">
+                <div class="countdown-item">
+                    <span id="days">120</span>
+                    <p>Days</p>
                 </div>
-                <button class="cta-button buy-button">BUY MAZOL NOW</button>
+                <div class="countdown-item">
+                    <span id="hours">00</span>
+                    <p>Hours</p>
+                </div>
+                <div class="countdown-item">
+                    <span id="minutes">00</span>
+                    <p>Minutes</p>
+                </div>
             </div>
-            <
+        </div>
+        <div class="card">
+            <h2>Mining Counter</h2>
+            <p id="minedAmount">0.000000 MZLx</p>
+            <button id="miningButton">Start Mining</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
