--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mining-section">
         <div class="mining-header">
             <div class="mining-title">MAZOL Mining Portal</div>
-            <div class="mining-status status-inactive">INACTIVE</div>
+            <div class="mining-status status-inactive" id="miningStatus">INACTIVE</div>
         </div>
         <div class="mining-timer" id="miningTimer">24:00:00.000</div>
         <div class="mining-total">Total Mined: <span id="totalMined">0</span> MZLx</div>
